data/forge_javadoc/1.7.10/processed/net_minecraft_entity_item_EntityMinecartFurnace.md
# EntityMinecartFurnace

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.item.EntityMinecart → net.minecraft.entity.item.EntityMinecartFurnace

## Class signature

```java
public class EntityMinecartFurnace extends EntityMinecart
```

## Constructors

- `EntityMinecartFurnace(World p_i1718_1_)`
- `EntityMinecartFurnace(World p_i1719_1_, double p_i1719_2_, double p_i1719_4_, double p_i1719_6_)`

## Methods

- `protected void applyDrag()`
- `protected void entityInit()`
- `Block func_145817_o()`
- `protected void func_145821_a(int p_145821_1_, int p_145821_2_, int p_145821_3_, double p_145821_4_, double p_145821_6_, Block p_145821_8_, int p_145821_9_)`
- `int getDefaultDisplayTileData()`
- `int getMinecartType()`
- `boolean interactFirst(EntityPlayer p_130002_1_)`
- `protected boolean isMinecartPowered()`
- `void killMinecart(DamageSource p_94095_1_)`
- `void onUpdate()`
- `protected void readEntityFromNBT(NBTTagCompound p_70037_1_)`
- `protected void setMinecartPowered(boolean p_94107_1_)`
- `protected void writeEntityToNBT(NBTTagCompound p_70014_1_)`

## Fields

- `double pushX`
- `double pushZ`